Подправил замечания